[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "async-lsm"
version = "0.1.0"

[features]
cli = ["dep:clap", "dep:color-eyre"]

[dependencies]
clap = { version = "4.5.21", features = ["derive"], optional = true }
color-eyre = { version = "0.6", optional = true }
tokio = { version = "1.0", features = ["full"] }
