[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "async-lsm"
version = "0.1.0"

[features]
cli = [
    "dep:clap",
    "dep:color-eyre",
    "dep:tracing-forest",
    "dep:tracing-subscriber",
]
local-storage = []

[dependencies]
clap = { version = "4.5.21", features = ["derive"], optional = true }
color-eyre = { version = "0.6", optional = true }
eyre = { version = "0.6" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.41"
tracing-forest = { version = "0.1.6", features = ["full"], optional = true }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
], optional = true }

[[bin]]
name = "asl"
required-features = ["cli"]
